# ChangeLog for www-plugins/flashgot
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*flashgot-1.2.2.1 (11 Oct 2010)

  11 Oct 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.2 (30 Sep 2010)

  30 Sep 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.1.31 (15 Sep 2010)

  15 Sep 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.1.30 (30 Aug 2010)

  30 Aug 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.1.29 (14 Aug 2010)

  14 Aug 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

  01 Aug 2010; Martin Väth <martin@mvath.de>
  Bump revision to force eclass upgrade.

  31 Jul 2010; Martin Väth <martin@mvath.de>
  Bump revision to force eclass upgrade.

*flashgot-1.2.1.28 (25 Jul 2010)

  06 Jun 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.1.27 (03 Jul 2010)

  06 Jun 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.1.23 (06 Jun 2010)

  06 Jun 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Switch to new mv_mozextension.eclass:
  Installs also for other mozilla variants like seamonkey.

*flashgot-1.2.1.21 (22 Apr 2010)

  22 Apr 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.2.1.18 (02 Apr 2010)

  02 Apr 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*flashgot-1.1.9.8 (28 Mar 2010)

  28 Mar 2010; Martin Väth <martin@mvath.de>
  import with minor changes from a personal overlay.