@@ -1,4 +1,4 @@
-DIST flashgot-1.2.2.1.xpi 336879 RMD160 bbc46b5ad039b198da59661d720580389c64c82f SHA1 7c33912d7167987a798e4e54a7dae88af56dc867 SHA256 d5e7bdef0311974324c7533e455ed73afb42912cd5f6d025c632c06ad8b9538a
-EBUILD flashgot-1.2.2.1.ebuild 394 RMD160 45ed08a08bee26e6f0132e98d8db39ec327f4516 SHA1 809c7cd563ed96037be3a2e8c22a5e504a966f9c SHA256 0cb562996c509d1dde7e4ffd48ae9ab558b9ef001351cdfd4a00d7539dd53a3b
-MISC ChangeLog 1915 RMD160 df3f84d1332153d4e1d01837798b8d4ce12380ac SHA1 ae94ebb56b66d2201f7d8afda39e5e6cf77e7b9f SHA256 77b4c7225934ec82424a64c56cb1022425fe311c5389c4e69c27a4ebe52cb15d
+DIST flashgot-1.2.3.xpi 337767 RMD160 c25bb4304f94809a0ef472da98ccfdf7a016d5c3 SHA1 7a9f8415046999f90f84e54c87f02860a9301343 SHA256 737cd3cb928d21ecb6cc468cf2caf8965b80fd7438343fc3c93d4a86aa9ca2bc
+EBUILD flashgot-1.2.3.ebuild 394 RMD160 45ed08a08bee26e6f0132e98d8db39ec327f4516 SHA1 809c7cd563ed96037be3a2e8c22a5e504a966f9c SHA256 0cb562996c509d1dde7e4ffd48ae9ab558b9ef001351cdfd4a00d7539dd53a3b
+MISC ChangeLog 2046 RMD160 fb2fc5ee45792b41bae2cb73e4b4eedaae64ee01 SHA1 33beeb6004d2f592716b8034a905e4dd88fa9393 SHA256 04b287512f016f6fa5a543f7632746431403024e9b7ccefdd426cf8bbac38e29
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
