@@ -1,4 +1,4 @@
-DIST noscript-2.0.3.4.xpi 497672 RMD160 ad2491d110592536f51c8547d67ecdd1e2d135cd SHA1 1da98a2bcdcbfac80e93c83e5be8a277ec22efe0 SHA256 320868aad249b137c94062fefb33e802a027c0b22d13728e105921f301afad94
-EBUILD noscript-2.0.3.4.ebuild 495 RMD160 4d989c6a74642d2d964c91b8810d9d3501708e05 SHA1 04acd4e4e7a0625358fbbcf82610fbb04a2a2231 SHA256 a7d4cc1f195484bd328ca572e24695fdc47df107ced37bbe4d6bab68aef3636d
-MISC ChangeLog 2372 RMD160 5f42fc1d48bd370e933045bb22a7bae784f8636c SHA1 a614706bd33fc98e5b54baba11af5d04fb84f526 SHA256 700ab429d30128e5f0d13dde769731b2e82c13e1580475f6fc6969ebe0716500
+DIST noscript-2.0.3.5.xpi 497888 RMD160 389f2cd41f3bf978f8e643a9143b68190c40ce4b SHA1 4148efbafd59e055ed37f7f8779fd6095db966a0 SHA256 e5fa6413f2173cd2d3a15807a6d78ef243c2423f69e47951c160b5970eafc127
+EBUILD noscript-2.0.3.5.ebuild 495 RMD160 4d989c6a74642d2d964c91b8810d9d3501708e05 SHA1 04acd4e4e7a0625358fbbcf82610fbb04a2a2231 SHA256 a7d4cc1f195484bd328ca572e24695fdc47df107ced37bbe4d6bab68aef3636d
+MISC ChangeLog 2505 RMD160 1d52dbb0b2ae9e78fcc8830a4c98e7c9ad085e58 SHA1 f7f1bc1b4bf65b506615bf119d76a14157079884 SHA256 58b08c2f9e2e2681714db69750666b9f577baf21421e9cc6f8393258871b02aa
 MISC metadata.xml 447 RMD160 4ec5ea6b99ff64f433b133a9347f0a57039b73b7 SHA1 a6af7ca7a606d2ddc4afbb9ba31ac694f22e9abd SHA256 927431d432628bf04ca3f6e6cd0fc9b5e40ac0f2d2ea70e4a795e0df527cba67
