@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*noscript-2.0.3.5 (17 Oct 2010)
+
+  17 Oct 2010; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *noscript-2.0.3.4 (17 Oct 2010)
 
   17 Oct 2010; Martin Väth <martin@mvath.de>
