@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*flashgot-1.2.3 (22 Oct 2010)
+
+  22 Oct 2010; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *flashgot-1.2.2.1 (11 Oct 2010)
 
   11 Oct 2010; Martin Väth <martin@mvath.de>
